--- a/package.json
+++ b/package.json
@@ -1,44 +1,32 @@
 {
-  "author": "Shane Brinkman-Davis Delamore, Imikimi LLC",
   "dependencies": {
-    "art-build-configurator": "*",
-    "art-class-system": "*",
-    "art-config": "*",
-    "art-standard-lib": "*",
-    "art-suite-app": "git://github.com/imikimi/art-suite-app",
-    "art-testbench": "*",
+    "aws-sdk": "^2.62.0",
+    "aws4": "^1.6.0",
     "bluebird": "^3.5.0",
-    "caffeine-script": "*",
-    "caffeine-script-runtime": "*",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chai": "^4.0.1",
-    "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.6",
     "colors": "^1.1.2",
-    "commander": "^2.9.0",
-    "css-loader": "^0.28.4",
-    "dateformat": "^2.0.0",
+    "compress": "^0.99.0",
+    "compression": "^1.6.2",
     "detect-node": "^2.0.3",
+    "express": "^4.15.3",
     "fs-extra": "^3.0.1",
-    "glob": "^7.1.2",
-    "glob-promise": "^3.1.0",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.4.2",
-    "neptune-namespaces": "*",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.18.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.6.0"
+    "jsonwebtoken": "^7.4.1",
+    "mailgun-js": "^0.11.2",
+    "morgan": "^1.8.2",
+    "newrelic": "^2.2.1",
+    "pusher": "^1.5.1",
+    "querystring": "*",
+    "stripe": "^4.22.0",
+    "throng": "^4.0.0",
+    "uuid": "^3.0.1",
+    "xhr2": "^0.1.4"
   },
   "description": "Art.Chat",
-  "license": "ISC",
-  "name": "art-chat",
+  "engines": {
+    "node": "8.x"
+  },
   "scripts": {
-    "build": "webpack --progress",
-    "start": "webpack-dev-server --hot --inline --progress",
-    "test": "webpack-dev-server --progress",
-    "testInBrowser": "webpack-dev-server --progress"
+    "build": "nn -s; webpack --progress",
+    "dev": "nn -s; webpack-dev-server --hot --inline --progress",
+    "start": "node build/Server.js"
   }
 }
