--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "build": "nn -s; webpack --progress",
     "dev": "nn -s; webpack-dev-server --hot --inline --progress",
     "start": "node build/Server.js"
-  }
+  },
+  "version": "1.0.0"
 }
